# cq-source-productboard

./: .gitignore  TestConfig.yaml  main.py  pyproject.toml
plugin/: __init__.py  plugin.py
plugin/client/: client.py
plugin/productboard/: client.py
plugin/tables/: __init__.py  companies.py  components.py  feature_statuses.py  features.py  notes.py  products.py  users.py
